feat: 合金弹头完整游戏 — 两层精灵系统、敌人AI、关卡地图、音效
- 玩家两层精灵渲染（腿+身体），支持方向偏移
- 敌人类型系统：SOLDIER/SNIPER/TURRET/RUNNER/GUARD，各自不同行为
- 敌人死亡动画、掉落物品、波次生成、飞机支援
- 三层视差背景、平台/障碍物系统
- 3关关卡地图、Boss系统、人质解救
- BGM/SFX音效系统、HUD界面、菜单/GameOver/Win画面